--- a/styles.css
+++ b/styles.css
@@ -21,6 +21,7 @@
 }
 
 .btn{
+    height: 44px;
     border: none;
     padding: 12px 16px;
     border-radius: 30px;
@@ -59,4 +60,80 @@ nav ul {
 nav ul li a{
     text-decoration: none;
     font-weight: 500;
+}
+header hr {
+    border: 1px solid #FFFFFF;
+    opacity: 30%;
+}
+
+/* banner styles */
+.banner{
+    background-image: url(./B13-A02-TechWave/assets/hero-bg.png);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    height: 760px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.banner-content{
+    position: relative;
+    width: 550px;
+}
+.circle{
+    position: relative;
+    width: 350px;
+    /* margin: 0px auto 120px 100px; */
+    margin: 0px auto 35px;
+}
+
+.circle-img{
+    width: 100%;
+}
+
+.banner-microphone{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.new-btn{
+    position: absolute;
+    top: 12px;
+    right: 30px;
+    background-color: #00FF88;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 30px;
+    font-size: 1.125rem;
+    font-weight: 600;
+    color: #1A0B2E;
+    box-shadow: 0 3px 27px #00ff887e;
+}
+
+.banner-header {
+    font-size: 3.75rem;
+    font-weight: 800;
+    margin-top: 40px;
+    margin-bottom: 8px;
+}
+.banner .paragraph{
+    opacity: 80%;
+    margin-bottom: 24px;
+}
+.banner .btn-spotify{
+    margin-right: 8px;
+}
+.subscribe-btn {
+    padding: 12px 20px;
+    border-radius: 30px;
+    font-weight: 600;
+    border: 2px solid #00FF88;
+    color: #00FF88;
+    background: none;
+    height: 44px;
 }
