--- a/styles.css
+++ b/styles.css
@@ -61,6 +61,9 @@ nav {
     align-items: center;
     height: 92px;
 }
+.responsive-nav{
+    display: none;
+}
 .nav-header{
     font-size: 3rem;
 }
@@ -153,7 +156,7 @@ nav ul li a{
     background-color: #1A0B2E;
 }
 .about-section{
-    padding: 50px 200px 120px;
+    padding: 3.125px 12.5px 7.5px;
     text-align: center;
 }
 .about-title{
@@ -171,10 +174,10 @@ nav ul li a{
 }
 .about-join{
     opacity: 80%;
-    margin-bottom: 80px;
+    margin-bottom: 5rem;
 }
 .about-cards {
-    margin-top: 80px;
+    margin-top: 5rem;
     justify-content: space-between;
     align-items: center;
 }
@@ -182,7 +185,7 @@ nav ul li a{
     font-size: 3rem;
     color: #00FF88;
     font-weight: 900;
-    margin-bottom: 16px;
+    margin-bottom: 1rem;
 }
 .card p{
     font-weight: 400;
@@ -193,7 +196,7 @@ nav ul li a{
 
 .choose{
     background-color: #230E3D;
-    padding: 120px 200px;
+    padding: 7.5rem 12.5rem;
     height: 1121px;
 }
 
@@ -449,3 +452,178 @@ footer{
     justify-content: center;
     opacity: 60%;
 }
+
+
+
+
+
+
+
+
+/* responsive */
+
+
+
+@media screen and (max-width: 576px) {
+
+    /* navbar */
+    .nav-container{
+        display: none;
+    }
+    .responsive-nav{
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    /* about section  */
+    .about-title{
+        font-size: 2rem;
+    }
+
+    .about-text,
+    .about-join {
+    font-size: 0.95rem;
+    line-height: 1.5;
+    }
+
+    .about-cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    }
+
+    .about-cards .card h3 {
+    font-size: 2.2rem;
+    }
+
+    /* choose section */
+    .choose {
+        padding: 1.25rem;
+    }
+    
+    .choose-header h3 {
+        font-size: 2rem;
+    }
+    
+    .choose-layout {
+        grid-template-columns: 1fr;
+        gap: 24px;
+    }
+    
+    .choose-layout  div {
+        grid-column: span 1 !important;
+        grid-row: span 1 !important;
+        padding: 24px 20px;
+    }
+    
+    .Audio img,
+    .Mobile img,
+    .Community img,
+    .Interviews img,
+    .Rewards img {
+        margin: 0 0 16px 0;
+        width: 60px;
+        height: 60px;
+    }
+    
+    .Audio h3,
+    .Mobile h3,
+    .Community h3,
+    .Interviews h3,
+    .Rewards h3 {
+        margin-left: 0;
+        font-size: 1.375rem;
+    }
+    
+    .Audio p,
+    .Mobile p,
+    .Community p,
+    .Interviews p,
+    .Rewards p {
+        margin-left: 0;
+        width: 100%;
+        font-size: 1rem;
+        line-height: 1.5;
+    }
+    
+    /* epiosodes section */
+
+    .episodes-host{
+        padding: 2.5rem 1.25rem;
+    }
+    .episodes-container h2 {
+        font-size: 2rem;
+    }
+    
+    .episodes-cards {
+        flex-direction: column;
+        gap: 32px;
+    }
+    
+    .episodes-cards .card {
+        width: 100%;
+        max-width: 100%;
+        height: auto;
+    }
+    
+    .episodes-cards .card iframe {
+        width: 100%;
+        aspect-ratio: 1.75;
+        height: auto;
+    }
+    
+    .card h4 {
+        font-size: 1.25rem;
+    }
+    
+    /* host section */
+
+    .host-header {
+        font-size: 2rem;
+    }
+    .host {
+    flex-direction: column;
+    padding: 24px 16px;
+    text-align: center;
+    border-radius: 25px;
+    }
+
+    .host-img {
+    margin: 24px auto 0;
+    }
+
+    .host-info .name {
+    font-size: 1.5rem;
+    margin-bottom: 16px;
+    }
+
+    .host-info p {
+    width: 100%;
+    line-height: 1.5rem;
+    }
+
+    .social ul {
+    justify-content: center;
+    }
+
+    /* footer  section  */
+
+    footer {
+        height: auto;
+        padding: 60px 16px;
+    }
+    
+    .footer-header {
+        font-size: 2.5rem;
+    }
+    
+    .footer-social {
+        flex-wrap: wrap;
+        justify-content: space-between;
+        width: 300px;
+    }
+    
+
+}
+
