--- a/styles.css
+++ b/styles.css
@@ -639,8 +639,9 @@ footer{
     
     .footer-social {
         flex-wrap: wrap;
-        justify-content: space-between;
-        width: 300px;
+        justify-content: space-around;
+        width: 300px;  
+        gap: 16px;
     }
     
 
